--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
-APP_NAME=Laravel
+APP_NAME=Forum
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:yxuOaHjh5xU9U94iqFwV4XIzLpAuqg+rKVIYNnNDFi8=
 APP_DEBUG=true
 APP_LOG_LEVEL=debug
 APP_URL=http://localhost
@@ -8,9 +8,9 @@ APP_URL=http://localhost
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=homestead
-DB_USERNAME=homestead
-DB_PASSWORD=secret
+DB_DATABASE=wall
+DB_USERNAME=root
+DB_PASSWORD=root
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -23,10 +23,10 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_DRIVER=smtp
-MAIL_HOST=smtp.mailtrap.io
-MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
+MAIL_HOST=debugmail.io
+MAIL_PORT=25
+MAIL_USERNAME=vladar21@gmail.com
+MAIL_PASSWORD=2957d4d0-469a-11e8-9c41-095dea5d053d
 MAIL_ENCRYPTION=null
 
 PUSHER_APP_ID=
